feat: Validación de soft delete y mejorar OpenAPI en Persona y Empresa
